app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 * require jquery.smartWizard/smart_wizard
 *= require jquery.steps-1.1.0/jquery.steps
 * require ag-grid
 *= require jquery-ui
 *= require select2
 *= require select2-bootstrap
 * this is for styling of the ajax_flash notification code
 *= require animate
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";
@import "font-awesome-sprockets";
@import "font-awesome";

// PRISME Navigation styles
.prisme-navbar{
  display: flex;
  height: 40px;
  align-items: stretch;
  background-color: rgb(228, 228, 228);
  font-size: 18px;
  font-weight: bold;
  color: black;
}
.prisme-navbar .glyphicon{
  top: initial;
  padding-top: 2px;
}
.prisme-navbar a{
  text-decoration: none;
  color: black
}
.prisme-navbar button{
  height: 24px;
  display: flex;
  flex: 0 0 auto;
  align-items: center;
}
.prisme-navbar-header{
  font-size: 24px;
  flex: 0 0 auto;
  align-items: center;
  padding: 0px 10px;
  display: flex;
}
.prisme-logo-prisme{
  color:#183445;
  margin-right: 4px;
}
.prisme-logo-tooling{
  color:#414199;
}
.prisme-navbar-navigation .dropdown a:focus{
  outline: thin dotted;
  outline: 5px auto -webkit-focus-ring-color;
  outline-offset: -2px;
}
.prisme-navbar-navigation{
  margin-bottom: 0px;
  border-left: 4px solid white;
  color: black;
  display: flex;
  flex: 0 0 auto;
  align-items: stretch;
}
.prisme-navbar-navigation > div{
  border-right: 4px solid white;
  border-bottom: 1px solid transparent;
  padding: 0px 10px;
  display: flex;
  flex: 0 0 auto;
  align-items: center;
  cursor: pointer;
}
.prisme-navbar-navigation > div:hover, .prisme-navbar-navigation > div:focus{
  border-bottom: 1px solid black;
}
.prisme-navbar-tools{
  display: flex;
  flex: 1 1 auto;
  justify-content: flex-end;
}
.prisme-navbar-tools > :first-child{
  border-left: 4px solid white;
}
.prisme-navbar-tools > div{
  display: flex;
  flex: 0 0 auto;
  align-items: center;
  padding: 0px 10px;
  border-right: 4px solid white;
  border-bottom: 1px solid transparent;
  cursor: pointer;
}
.prisme-navbar-tools > div:hover, .prisme-navbar-tools > div:focus{
  border-bottom: 1px solid black;
}
#prisme_user_preference_link{
  margin-right: 0px;
}
.prisme-navbar-tools .glyphicon, .prisme-navbar-tools .fa{
  margin-right: 5px;
  padding-bottom: 4px;
}
.prisme-link-button{
  background: none !important;
  border: none;
  padding: 0 !important;
}
.prisme-footer{
  text-align: center;
  height: 25px;
  background-color: black;
  color: white;
  border: 1px solid #ddd;
  border-radius: 4px;
  position:fixed;
  bottom:0;
  clear: both;
  width: 98%;
}

// input div is used to size the div surrounding each input on the modal windows
.input_div {
  width: 525px;
}

.input_525 {
  width: 525px;
}

// styles for a classic fieldset look
fieldset.classic-border {
  border: 1px groove #ddd !important;
  padding: 0 1.4em 1.4em 1.4em !important;
  margin: 0 0 1.5em 0 !important;
  -webkit-box-shadow: 0px 0px 0px 0px #000;
  box-shadow: 0px 0px 0px 0px #000;
  background-color: cornsilk;
  border-radius: 8px;
}

legend.classic-border {
  font-size: 1.2em !important;
  font-weight: bold !important;
  text-align: left !important;
  width: auto;
  padding: 0 20px;
  border-bottom: none;
  background-color: navy;
  color: white;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

// used with jquery validation - specifically with select2 dropdowns and jq validate
// start - jquery validate error displayed to the right of the label for the input field
label.error {
  margin-left:9px;
  font-size:small;
  color: #4d0909;
}

label.arrow_box {
  position: relative;
  background: #e0ddda;
  border: 1px solid #4d0909;
  border-radius: 6px;
  padding: 5px;
  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.80);
  -moz-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.80);
  -webkit-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.80);
}
label.arrow_box:after, .arrow_box:before {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

label.arrow_box:after {
  border-color: rgba(224, 221, 218, 0);
  border-right-color: #e0ddda;
  border-width: 6px;
  margin-top: -6px;
}

label.arrow_box:before {
  border-color: rgba(77, 9, 9, 0);
  border-right-color: #4d0909;
  border-width: 8px;
  margin-top: -8px;
}
// end jquery validator label validation error

html, body {
  padding: 5px;
}

.prisme-table tr:hover {
  cursor: pointer;
}

.prisme-table {
  font-family: calibri, arial, sans-serif;
  width: 100%;
}

.prisme-table thead th {
  background-color: #8CCCF1;
  font-weight: bold;
  text-align: center;
  vertical-align: bottom;
  border: 1px solid #466E85;
  padding: 10px;
}

.prisme-table td {
  border: 1px solid #466E85;
  padding: 7px;
}

.table-striped > tbody > tr:nth-of-type(odd) {
  background-color: #f2f2f2;
}

.table-striped > tbody > tr:nth-of-type(even) {
  background: transparent;
}


/* line 125, C:/work/ETS/gem_home/gems/bootstrap-sass-3.3.6/assets/stylesheets/bootstrap/_tables.scss */
.table-hover > tbody > tr:hover {
  background-color: #dde7f5;
}

.text-italic {
  font-style: italic;
}

.text-underline {
  text-decoration: underline;
}

/* tooltip styling*/
 .prismetooltip {
   position: relative;
   display: inline-block;
   border-bottom: 1px dotted black;
 }

.prismetooltip .tooltiptext {
  visibility: hidden;
  width: 350px;
  background-color: #8CCCF1;
  color: black;
  text-align: left;
  border-radius: 6px;
  padding: 5px 0;
  overflow:scroll; height:400px;
  border-radius: 3px;
  padding: 5px;
  box-shadow: 10px 10px 5px #888888 ;
  /* Position the tooltip */
  position: absolute;
  z-index: 1;
}

.prismetooltip:hover .tooltiptext {
  visibility: visible;
}
#prisme_navbar_navigation .nav a:hover, #prisme_navbar_navigation .nav a:focus {
  border-bottom: 1px solid black;
}
#prisme_navbar_tools a:hover, #prisme_navbar_tools a:focus {
  text-decoration: none;
  color: black;
}
h1,
.h1 {
  font-size: 24px;
  color: black;
  flex: 0 0 auto;
  align-items: center;
  display: flex;
  font-size: 18px;
  font-weight: bold;
  color: black;
}

